--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                     <div class="section-inner">
                         <h2 class="heading">Sobre Mim</h2>
                         <div class="content">
-                            <p>Write a brief intro about yourself. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.</p>    
+                            <p>Apaixonado pela tecnologia em estado da arte e entender como ela se relaciona com o mercado e com nosso dia a dia. Sou graduando em Engenharia de Produção pela Universidade Estadual de Campinas e entre Agosto de 2014 e Agosto de 2015 realizei um intercâmbio academico com bolsa completa para estudar na Purdue University. Lá pude expandir meus conhecimentos em engenharia assim como meu gosto por computadores e algoritmos, desenvolvendo sites e trabalhando com banco de dados</p>    
          
-        <p>It's a good idea to include your personal interests and hobbies as well. Commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                            <p>Sempre interessado pelo trabalho voluntário, sou dos membros fundadores do primeiro Núcleo do Engenheiros Sem Fronteiros - Brasil no estado São Paulo e trabalhei como Assessor de Gestão Estratégica e de Pessoas por um ano e dei aula de história no cursinho comunitário da Faculade de Ciencias Aplicadas da Unicamp durante o ano letivo de 2012</p>
+
+                            <p>Além disso, sou apaixonado por séries e filmes. Gosto de pensar que sei tocar violão e de vez em quanto tento escrever</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
