--- a/contos/index.html
+++ b/contos/index.html
@@ -30,10 +30,10 @@
 					<p>por que nao tenho um nome mais legal</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly scrolly-centered">Entrar no site</a>
+					<a href="#first" class="button style2 scrolly scrolly-centered">Entrar no site</a>
 				</footer>
 			</section>
-		<!-- Banner -->
+		<!-- Banner 
 			<section id="banner">
 				<p>Não sou escritor, mas sei lá, escrever é bom para alma.<br />
 					É uma ótima cartase colocar as coisas no papel. <br />
@@ -44,43 +44,44 @@
 					<a href="#first" class="button style2 scrolly">Clique aqui, por que, sei la, é legal</a>
 				</footer>
 			</section>
+		-->
 		
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 left">
-				<a href="./caminhada.html" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+				<a href="./caminhada.html" class="image"><img src="images/caminhada.jpg" alt=""/></a>
 				<div class="inner">
 					<header>
 						<h2>A Caminhada</h2>
 					</header>
-					<p>Escrevi algo nessa seção só para nao ficar vazia. Ela é bem inutil. Vou procurar uma foto melhor para usar</p>
+					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
 			</article>
 		<!-- Feature 2 -->
 			<article id="second" class="container box style1 left">
-				<a href="./navegacao.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="./navegacao.html" class="image fit"><img src="images/navegacao.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Nevegação</h2>
 					</header>
-					<p>De novo, nao sei o que escrever aqui. Mas enfim, esse é o template e sem muitas linhas fica feio, né?</p>
+					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
 			</article>
 			<article class="container box style1 left">
-				<a href="./transatlanticismo.html" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+				<a href="./transatlanticismo.html" class="image fit"><img src="images/transatlanticismo.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Transatlanticismo</h2>
 					</header>
-					<p>Escrevi algo nessa seção só para nao ficar vazia. Ela é bem inutil. Vou procurar uma foto melhor para usar</p>
+					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
 			</article>
 			<article class="container box style1 left">
-				<a href="./queda.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="./queda.html" class="image fit"><img src="images/queda.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>A Queda</h2>
 					</header>
-					<p>De novo, nao sei o que escrever aqui. Mas enfim, esse é o template e sem muitas linhas fica feio, né?</p>
+					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
 			</article>
 		<section id="footer">
@@ -94,7 +95,7 @@
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Contos. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</section>
