--- a/contos/index.html
+++ b/contos/index.html
@@ -76,7 +76,7 @@
 				</div>
 			</article>
 			<article class="container box style1 left">
-				<a href="./queda.html" class="image fit"><img src="images/queda.jpg" alt="" /></a>
+				<a href="./queda" class="image fit"><img src="images/queda.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>A Queda</h2>
