--- a/contos/index.html
+++ b/contos/index.html
@@ -48,7 +48,7 @@
 		
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 left">
-				<a href="./caminhada.html" class="image"><img src="images/caminhada.jpg" alt=""/></a>
+				<a href="./caminhada" class="image"><img src="images/caminhada.jpg" alt=""/></a>
 				<div class="inner">
 					<header>
 						<h2>A Caminhada</h2>
@@ -58,7 +58,7 @@
 			</article>
 		<!-- Feature 2 -->
 			<article id="second" class="container box style1 left">
-				<a href="./navegacao.html" class="image fit"><img src="images/navegacao.jpg" alt="" /></a>
+				<a href="./navegacao" class="image fit"><img src="images/navegacao.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Nevegação</h2>
@@ -67,7 +67,7 @@
 				</div>
 			</article>
 			<article class="container box style1 left">
-				<a href="./transatlanticismo.html" class="image fit"><img src="images/transatlanticismo.jpg" alt="" /></a>
+				<a href="./transatlanticismo" class="image fit"><img src="images/transatlanticismo.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Transatlanticismo</h2>
