--- a/contos/index.html
+++ b/contos/index.html
@@ -11,6 +11,16 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		</section>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.scrolly.min.js"></script>
+		<script src="js/jquery.poptrox.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
@@ -36,9 +46,17 @@
 				</footer>
 			</section>
 		-->
-		
-		<!-- Feature 1 -->
 			<article id="first" class="container box style1 left">
+				<a href="./reabilitacao" class="image"><img src="images/reabilitacao.jpg" alt=""/></a>
+				<div class="inner">
+					<header>
+						<h2>Reabilitacao</h2>
+					</header>
+					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
+				</div>
+			</article>
+		<!-- Feature 1 -->
+			<article id="second" class="container box style1 left">
 				<a href="./caminhada" class="image"><img src="images/caminhada.jpg" alt=""/></a>
 				<div class="inner">
 					<header>
@@ -89,16 +107,6 @@
 					<li>&copy; Contos. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
-		</section>
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/jquery.poptrox.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-		</noscript>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
