--- a/Projetos/EletronicLife/index.html
+++ b/Projetos/EletronicLife/index.html
@@ -59,10 +59,14 @@
                     <div class="section-inner">
                         <h2 class="heading"> Elife </h2>
 
+                        <img src = "https://media.giphy.com/media/GyJ8p0Um850ic/giphy.gif"/>
 
-                        <button onclick = "animateWorld(valley)">run code</button>
+                        <div id = "myDIV">
 
-                        <div id = "myDIV"> </div>
+                        <textarea type="text" id="novoMundo"></textarea>
+                        <button onclick = "animateWorld(mundo)">run code</button>
+
+                        </div>
 
 
                         <div class="content">
@@ -180,8 +184,8 @@
     <script type="text/javascript" src="../../assets/plugins/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
     <script type="text/javascript" src="../../assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script> 
-    <script src="07_elife.js"></script>
-    <script src="animateworld.js"></script>
+    <script src="scripts/elife.js"></script>
+    <script src="scripts/animateworld.js"></script>
 
     <!-- github activity plugin -->
     <script type="text/javascript" src="../../assets/plugins/github-activity/dist/mustache/mustache.min.js"></script>
