--- a/Projetos/IC/index.html
+++ b/Projetos/IC/index.html
@@ -57,12 +57,12 @@
             <div class="primary col-md-8 col-sm-12 col-xs-12">
                 <section class="about section">
                     <div class="section-inner">
-                        <h2 class="heading"> Computação Imuno-inspirada na Análise de Componentes
+                        <h2 class="heading-centro"> Computação Imuno-inspirada na Análise de Componentes
 Independentes em Campos Finitos </h2>
                         <div class="content">
                             <p>TESTE</p>
 
-                            <div class="escondido" id="hidden">
+                            <div class="hidden" id="hidden">
                                 <p>TESTE</p>
                             </div>
 
