--- a/en/Projects/EletronicLife/index.html
+++ b/en/Projects/EletronicLife/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>Daniel Pereira - IC</title>
+    <title>Daniel Pereira</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,7 +36,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <a href="/"><img class="profile-image img-responsive pull-left" src="../../assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
+            <img class="profile-image img-responsive pull-left" src="../../assets/images/fotoperfil.png" alt="Daniel Pereira" />
             <div class="profile-content pull-left">
                 <h1 class="name">Daniel de Araujo Pereira</h1>
                 <h2 class="desc">Graduando em Engenharia de Produção</h2>   
@@ -57,16 +57,19 @@
             <div class="primary col-md-8 col-sm-12 col-xs-12">
                 <section class="about section">
                     <div class="section-inner">
-                        <h6 class="heading .centro"> Computação Imuno-inspirada na Análise de Componentes
-Independentes em Campos Finitos </h6>
+                        <h2 class="heading"> Elife </h2>
+
+                        <img src = "https://media.giphy.com/media/GyJ8p0Um850ic/giphy.gif"/>
+
+                        <div id = "myDIV">
+
+                        <textarea type="text" id="novoMundo"></textarea>
+                        <button onclick = "animateWorld(mundo)">run code</button>
+
+                        </div>
+
+
                         <div class="content">
-                            <p>TESTE</p>
-
-                            <div class="sub" id="Expandir">
-                                <p onClick>TESTE</p>
-                            </div>
-
-
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
@@ -176,17 +179,13 @@ Independentes em Campos Finitos </h6>
         </div><!--//container-->
     </footer><!--//footer-->
  
-    <!-- Javascript -->    
-    <script>
-    document.getElementById("hidden").onclick = function() {
-    this.style.height = 'auto';
-    }
-    </script>
-
+    <!-- Javascript -->          
     <script type="text/javascript" src="../../assets/plugins/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="../../assets/plugins/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
     <script type="text/javascript" src="../../assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script> 
+    <script src="scripts/elife.js"></script>
+    <script src="scripts/animateworld.js"></script>
 
     <!-- github activity plugin -->
     <script type="text/javascript" src="../../assets/plugins/github-activity/dist/mustache/mustache.min.js"></script>
