--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -14,16 +14,16 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
     <!-- Global CSS -->
-    <link rel="stylesheet" href="../../assets/plugins/bootstrap/css/bootstrap.min.css">   
+    <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">   
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="../../assets/plugins/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.css">
     <!-- github acitivity css -->
-    <link rel="stylesheet" href="../../assets/plugins/github-activity/dist/github-activity-0.1.1.min.css">
-    <link rel="stylesheet" href="../../assets/plugins/github-activity/dist/octicons/octicons.min.css">
+    <link rel="stylesheet" href="/assets/plugins/github-activity/dist/github-activity-0.1.1.min.css">
+    <link rel="stylesheet" href="/assets/plugins/github-activity/dist/octicons/octicons.min.css">
     
     
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="../../assets/css/styles.css">
+    <link id="theme-style" rel="stylesheet" href="/assets/css/styles.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -36,10 +36,10 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <a href="/"><img class="profile-image img-responsive pull-left" src="../../assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
+            <a href="/"><img class="profile-image img-responsive pull-left" src="/assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
             <div class="profile-content pull-left">
                 <h1 class="name">Daniel de Araujo Pereira</h1>
-                <h2 class="desc">Graduando em Engenharia de Produção</h2>   
+                <h2 class="desc">Industiral Engineer Undergrad Student</h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
@@ -57,10 +57,26 @@
             <div class="primary col-md-8 col-sm-12 col-xs-12">
                 <section class="about section">
                     <div class="section-inner">
-                        <h6 class="heading .centro"> Computação Imuno-inspirada na Análise de Componentes
-Independentes em Campos Finitos </h6>
+                        <h6 class="heading .centro"> Imuno-inspired Computation on the Independent Component Analysis in Galois Fields </h6>
                         <div class="content">
-                            <p>TESTE</p>
+
+                            <li><a href="https://github.com/ddearauj"><i class="fa fa-github-alt"></i></a></li>                  
+
+                            <p>The Blind Signal Separation (BSS) is the separation of a set of source signals from mixed signals. A simple example of such problem is to think of a group of people having a conversation and every person in the group is connected to a microphone. Each microphone is supposed to capture only the voice (signal) of the person it is attached to. But naturally it will pick up noises from other people in the group (sources), therefore the signal for each microphone will be a combination of the sources. What we want to do is separate the signal to make sure we have only a single voice per microphone.</p>
+
+                            <p>One of the approaches used to solve such problem - which was the one studied on the project -  the Independent Component Analysis (ICA), is usually considered on the field of real or complex signals. However, this project focused on discrete and finite fields (Galois Fields), allowing the problem to be trated as a combinatory search, therefore being in the scope of the utilization of bio-inspired computation to determine the solution [SILVA, 2013].</p>
+
+                            <p> Bio-inspired computation is influenced by biological phenomena in order to develop algorithms that can be applied to a wide range of problems in diverse areas [DE CASTRO, 2006]. This project focused on Artificial Immune System (AIS) algorithms. The one studied is the cob-aiNet[C], which is combines the principles of Clonal Selection and the Theory of Immunological Network [COELHO, 2011].</p>
+
+
+
+                            <p>References</p>
+
+                            <a href="ftp://ftp.dca.fee.unicamp.br/pub/docs/vonzuben/theses/tese_dout_Guilherme_P_Coelho.pdf">COELHO, G. P. Redes imunológicas artificiais para otimização em espaços contínuos : uma proposta baseada em concentração de anticorpos</a>
+
+                            <a href="http://www.amazon.com/Fundamentals-Natural-Computing-Applications-Information/dp/1584886439">DE CASTRO, L. N. Fundamentals of Natural Computing: Basic Concepts, Algorithms and Applications. (Chapman & Hall/CRC Computer and Information Science Series)</a>
+
+                            <a href="http://www.bibliotecadigital.unicamp.br/document/?code=000918458">SILVA, D. G. Aprendizado de máquina baseado na teoria da informação: contribuições à separação de sinais em corpos finitos e inversão de sistemas de Wiener.</a>
 
                             <div class="sub" id="Expandir">
                                 <p onClick>TESTE</p>
@@ -183,16 +199,16 @@ Independentes em Campos Finitos </h6>
     }
     </script>
 
-    <script type="text/javascript" src="../../assets/plugins/jquery-1.11.2.min.js"></script>
-    <script type="text/javascript" src="../../assets/plugins/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
-    <script type="text/javascript" src="../../assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script> 
+    <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="/assets/plugins/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
+    <script type="text/javascript" src="/assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script> 
 
     <!-- github activity plugin -->
-    <script type="text/javascript" src="../../assets/plugins/github-activity/dist/mustache/mustache.min.js"></script>
-    <script type="text/javascript" src="../../assets/plugins/github-activity/dist/github-activity-0.1.1.min.js"></script>
+    <script type="text/javascript" src="/assets/plugins/github-activity/dist/mustache/mustache.min.js"></script>
+    <script type="text/javascript" src="/assets/plugins/github-activity/dist/github-activity-0.1.1.min.js"></script>
     <!-- custom js -->
-    <script type="text/javascript" src="../../assets/js/main.js"></script>            
+    <script type="text/javascript" src="/assets/js/main.js"></script>            
 </body>
 </html> 
 
