--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -72,11 +72,11 @@
 
                             <p>References</p>
 
-                            <a href="ftp://ftp.dca.fee.unicamp.br/pub/docs/vonzuben/theses/tese_dout_Guilherme_P_Coelho.pdf">COELHO, G. P. Redes imunológicas artificiais para otimização em espaços contínuos : uma proposta baseada em concentração de anticorpos</a>
+                            <p><a href="ftp://ftp.dca.fee.unicamp.br/pub/docs/vonzuben/theses/tese_dout_Guilherme_P_Coelho.pdf">COELHO, G. P. Redes imunológicas artificiais para otimização em espaços contínuos : uma proposta baseada em concentração de anticorpos</a></p>
 
-                            <a href="http://www.amazon.com/Fundamentals-Natural-Computing-Applications-Information/dp/1584886439">DE CASTRO, L. N. Fundamentals of Natural Computing: Basic Concepts, Algorithms and Applications. (Chapman & Hall/CRC Computer and Information Science Series)</a>
+                            <p><a href="http://www.amazon.com/Fundamentals-Natural-Computing-Applications-Information/dp/1584886439">DE CASTRO, L. N. Fundamentals of Natural Computing: Basic Concepts, Algorithms and Applications. (Chapman & Hall/CRC Computer and Information Science Series)</a></p>
 
-                            <a href="http://www.bibliotecadigital.unicamp.br/document/?code=000918458">SILVA, D. G. Aprendizado de máquina baseado na teoria da informação: contribuições à separação de sinais em corpos finitos e inversão de sistemas de Wiener.</a>
+                           <p><a href="http://www.bibliotecadigital.unicamp.br/document/?code=000918458">SILVA, D. G. Aprendizado de máquina baseado na teoria da informação: contribuições à separação de sinais em corpos finitos e inversão de sistemas de Wiener.</a></p>
 
                             <div class="sub" id="Expandir">
                                 <p onClick>TESTE</p>
