--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -51,7 +51,7 @@
                         <h6 class="heading .centro"> Imuno-inspired Computation on the Independent Component Analysis in Galois Fields </h6>
                         <div class="content">
 
-                            <p><a href="https://github.com/ddearauj/cob-aiNet"><i class="fa fa-github-alt"></i></a>               
+                            <p><a href="https://github.com/ddearauj/cob-aiNet"><i class="fa fa-github-alt"></i></a>Project Github</p>               
 
                             <p>The Blind Signal Separation (BSS) is the separation of a set of source signals from mixed signals. A simple example of such problem is to think of a group of people having a conversation and every person in the group is connected to a microphone. Each microphone is supposed to capture only the voice (signal) of the person it is attached to. But naturally it will pick up noises from other people in the group (sources), therefore the signal for each microphone will be a combination of the sources. What we want to do is separate the signal to make sure we have only a single voice per microphone.</p>
 
