--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -32,7 +32,7 @@
 
     <script>
         $(function(){
-        $("#header").load("/assests/html/header.html"); 
+        $("#header").load("/assets/html/header.html"); 
         });
     </script>   
     
@@ -49,9 +49,7 @@
                 <section class="about section">
                     <div class="section-inner">
                         <h6 class="heading .centro"> Imuno-inspired Computation on the Independent Component Analysis in Galois Fields </h6>
-                        <div class="content">
-
-                            <p><a href="https://github.com/ddearauj/cob-aiNet"><i class="fa fa-github-alt"></i></a>Project Github</p>               
+                        <div class="content">         
 
                             <p>The Blind Signal Separation (BSS) is the separation of a set of source signals from mixed signals. A simple example of such problem is to think of a group of people having a conversation and every person in the group is connected to a microphone. Each microphone is supposed to capture only the voice (signal) of the person it is attached to. But naturally it will pick up noises from other people in the group (sources), therefore the signal for each microphone will be a combination of the sources. What we want to do is separate the signal to make sure we have only a single voice per microphone.</p>
 
@@ -59,8 +57,7 @@
 
                             <p> Bio-inspired computation is influenced by biological phenomena in order to develop algorithms that can be applied to a wide range of problems in diverse areas [DE CASTRO, 2006]. This project focused on Artificial Immune System (AIS) algorithms. The one studied is the cob-aiNet[C], which is combines the principles of Clonal Selection and the Theory of Immunological Network [COELHO, 2011].</p>
 
-
-
+                            <p>Project Github<a href="https://github.com/ddearauj/cob-aiNet"><i class="fa fa-github-alt"></i></a></p> 
                             <p>References</p>
 
                             <p><a href="ftp://ftp.dca.fee.unicamp.br/pub/docs/vonzuben/theses/tese_dout_Guilherme_P_Coelho.pdf">COELHO, G. P. Redes imunológicas artificiais para otimização em espaços contínuos : uma proposta baseada em concentração de anticorpos</a></p>
