--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -32,7 +32,7 @@
 
     <script>
         $(function(){
-        $("#header").load("/assets/html/header.html"); 
+        $("#cabeca").load("/assets/html/header.html"); 
         });
     </script>   
     
@@ -40,7 +40,7 @@
 
 <body>
     <!-- ******HEADER****** --> 
-    <header class="header" id ="header">
+    <header class="header" id ="cabeca">
     </header><!--//header-->
     
     <div class="container sections-wrapper">
