--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -20,6 +20,8 @@
     <!-- github acitivity css -->
     <link rel="stylesheet" href="/assets/plugins/github-activity/dist/github-activity-0.1.1.min.css">
     <link rel="stylesheet" href="/assets/plugins/github-activity/dist/octicons/octicons.min.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+
     
     
     <!-- Theme CSS -->  
@@ -57,7 +59,7 @@
 
                             <p> Bio-inspired computation is influenced by biological phenomena in order to develop algorithms that can be applied to a wide range of problems in diverse areas [DE CASTRO, 2006]. This project focused on Artificial Immune System (AIS) algorithms. The one studied is the cob-aiNet[C], which is combines the principles of Clonal Selection and the Theory of Immunological Network [COELHO, 2011].</p>
 
-                            <p>Project Github<a href="https://github.com/ddearauj/cob-aiNet"><i class="fa fa-github-alt"></i></a></p> 
+                            <p><a href="https://github.com/ddearauj/cob-aiNet"><i class="fa fa-github-alt"></i></a>  Project Github</p> 
                             <p>References</p>
 
                             <p><a href="ftp://ftp.dca.fee.unicamp.br/pub/docs/vonzuben/theses/tese_dout_Guilherme_P_Coelho.pdf">COELHO, G. P. Redes imunológicas artificiais para otimização em espaços contínuos : uma proposta baseada em concentração de anticorpos</a></p>
