--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -43,7 +43,8 @@
 
 <body>
     <!-- ******HEADER****** --> 
-    <header class="header" id ="cabeca">
+    <header class="header">
+        <div class="container" id ="cabeca"></div>
     </header><!--//header-->
     
     <div class="container sections-wrapper">
