--- a/en/Projects/index.html
+++ b/en/Projects/index.html
@@ -64,24 +64,13 @@
             <div class="primary col-md-8 col-sm-12 col-xs-12">
                 <section class="about section">
                     <div class="section-inner">
-                        <h6 class="heading .centro"> Imuno-inspired Computation on the Independent Component Analysis in Galois Fields </h6>
-                        <div class="content">         
+                        <h6 class="heading .centro"> About me</h6>
+                        <div class="content">
+                            <p>Passionate about state of the art technology and understanding how it relates and shapes the market and our daily lives. I am an Industrial Engineering Undergraduate Student in the Universidade Estadual de Campinas (UNICAMP), Brazil. Between Fall/14 and Fall/15 I was awarded with a full scholarship exchenge program by the Brazilian Government to study at Purdue University and during the summer I was hired by Shell Internation Exploration and Production Inc. as a Subsea Hardware Engineer Summer Intern.</p>
 
-                            <p>The Blind Signal Separation (BSS) is the separation of a set of source signals from mixed signals. A simple example of such problem is to think of a group of people having a conversation and every person in the group is connected to a microphone. Each microphone is supposed to capture only the voice (signal) of the person it is attached to. But naturally it will pick up noises from other people in the group (sources), therefore the signal for each microphone will be a combination of the sources. What we want to do is separate the signal to make sure we have only a single voice per microphone.</p>
+                            <p>University really peeked my interest in software development and algorithms.During my sophomore and junior years, I developed an year long <a href="Projects/IC">Research</a> with UNICAMP's Electrical and Computer Engineering School on Blind Signal Separation using bio-inspired computaion.</p>
 
-                            <p>One of the approaches used to solve such problem - which was the one studied on the project -  the Independent Component Analysis (ICA), is usually considered on the field of real or complex signals. However, this project focused on discrete and finite fields (Galois Fields), allowing the problem to be trated as a combinatory search, therefore being in the scope of the utilization of bio-inspired computation to determine the solution [SILVA, 2013].</p>
-
-                            <p> Bio-inspired computation is influenced by biological phenomena in order to develop algorithms that can be applied to a wide range of problems in diverse areas [DE CASTRO, 2006]. This project focused on Artificial Immune System (AIS) algorithms. The one studied is the cob-aiNet[C], which is combines the principles of Clonal Selection and the Theory of Immunological Network [COELHO, 2011].</p>
-
-                            <p><a href="https://github.com/ddearauj/cob-aiNet"><i class="fa fa-github-alt"></i></a><a href="https://github.com/ddearauj/cob-aiNet">  Project Github</a></p> 
-                            <p>References</p>
-
-                            <p><a href="ftp://ftp.dca.fee.unicamp.br/pub/docs/vonzuben/theses/tese_dout_Guilherme_P_Coelho.pdf">COELHO, G. P. Redes imunológicas artificiais para otimização em espaços contínuos : uma proposta baseada em concentração de anticorpos</a></p>
-
-                            <p><a href="http://www.amazon.com/Fundamentals-Natural-Computing-Applications-Information/dp/1584886439">DE CASTRO, L. N. Fundamentals of Natural Computing: Basic Concepts, Algorithms and Applications. (Chapman & Hall/CRC Computer and Information Science Series)</a></p>
-
-                           <p><a href="http://www.bibliotecadigital.unicamp.br/document/?code=000918458">SILVA, D. G. Aprendizado de máquina baseado na teoria da informação: contribuições à separação de sinais em corpos finitos e inversão de sistemas de Wiener.</a></p>
-
+                            <p> I've always been interested and involved with volunteer work. At UNICAMP this was translated by founding along some friends the first Chapter of the Engineers Without Borders - Brazil in the state of São Paulo in September of 2013, where I worked for a year as Strategic Management and People Advisor. I also taught (lectured é muito presunçoso?) World History in the community prep school of the School of Applied Sciences aimed to reach high school students who could not afford a prep school</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
