--- a/en/index.html
+++ b/en/index.html
@@ -31,7 +31,7 @@
     <![endif]-->
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
     <script>
-    $(function(){$("#second").load("/assets/html/secondary.html"); });
+    $(function(){$("#secondary").load("/assets/html/secondary.html"); });
     </script>
 
 </head> 
@@ -106,7 +106,7 @@
                 
                <!-- </section> //section-->
             </div><!--//primary-->
-            <div class="secondary col-md-4 col-sm-12 col-xs-12" id="second">
+            <div class="col-md-4 col-sm-12 col-xs-12" id="secondary">
             </div><!--//secondary-->    
         </div><!--//row-->
     </div><!--//masonry-->
