--- a/en/index.html
+++ b/en/index.html
@@ -31,7 +31,7 @@
     <![endif]-->
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
     <script>
-    $(function(){$("#secondary").load("/assets/html/secondary.html"); });
+    $(function(){$("#segundo").load("/assets/html/secondary.html"); });
     </script>
 
 </head> 
@@ -106,7 +106,8 @@
                 
                <!-- </section> //section-->
             </div><!--//primary-->
-            <div class="col-md-4 col-sm-12 col-xs-12" id="secondary">
+            <div class="secondary col-md-4 col-sm-12 col-xs-12">
+                <id="segundo">
             </div><!--//secondary-->    
         </div><!--//row-->
     </div><!--//masonry-->
