--- a/en/index.html
+++ b/en/index.html
@@ -107,7 +107,7 @@
                <!-- </section> //section-->
             </div><!--//primary-->
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
-                <id="segundo">
+                <aside id="segundo"></aside>
             </div><!--//secondary-->    
         </div><!--//row-->
     </div><!--//masonry-->
