--- a/en/index.html
+++ b/en/index.html
@@ -107,8 +107,94 @@
                <!-- </section> //section-->
             </div><!--//primary-->
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
-                    <div id="segundo">
-                    </div>
+<aside class="info aside section">
+<div class="section-inner" id="segundo">
+<h2 class="heading sr-only">Basic Info</h2>
+<div class="content">
+<ul class="list-unstyled">
+<li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>São Paulo, Brazil</li>
+<li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">daniel@dpereira.me</a></li>
+</ul>
+</div><!--//content-->  
+</div><!--//section-inner-->                 
+</aside><!--//aside-->
+<aside class="skills aside section">
+<div class="section-inner">
+<h2 class="heading">Skills</h2>
+<div class="content">
+<p class="intro">
+</p>
+<div class="skillset">
+<div class="item">
+<h3 class="level-title">C<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediate</span></h3>
+<div class="level-bar">
+<div class="level-bar-inner" data-level="60%">
+</div>                                      
+</div><!--//level-bar-->                                 
+</div><!--//item-->
+<div class="item">
+<h3 class="level-title">Java<span class="level-label">Intermediate</span></h3>
+<div class="level-bar">
+<div class="level-bar-inner" data-level="60%">
+</div>                                      
+</div><!--//level-bar-->                                 
+</div><!--//item-->
+<div class="item">
+<h3 class="level-title">MS Office and VBA<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediate</span></h3>
+<div class="level-bar">
+<div class="level-bar-inner" data-level="60%">
+</div>                                      
+</div><!--//level-bar-->                                 
+</div><!--//item-->                                
+</div>              
+</div><!--//content-->  
+</div><!--//section-inner-->                 
+</aside><!--//section-->
+<aside class="education aside section">
+<div class="section-inner">
+<h2 class="heading">Education</h2>
+<div class="content">
+<div class="item">                      
+<h3 class="title"><i class="fa fa-graduation-cap"></i> Exchange Student</h3>
+<h4 class="university">Purdue University<span class="year">(2014-2015)</span></h4>
+</div><!--//item-->
+<div class="item">
+<h3 class="title"><i class="fa fa-graduation-cap"></i> Industrial Engineer Undergrad Student </h3>
+<h4 class="university">Universidade Estadual de Campinas <span class="year">(2012-2017)</span></h4>
+</div><!--//item-->
+</div><!--//content-->
+</div><!--//section-inner-->
+</aside><!--//section-->
+<aside class="languages aside section">
+<div class="section-inner">
+<h2 class="heading">Languages</h2>
+<div class="content">
+<ul class="list-unstyled">
+<li class="item">
+<span class="title"><strong>Portuguese:</strong></span>
+<span class="level">Idioma Nativo <br class="visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
+</li><!--//item-->
+<li class="item">
+<span class="title"><strong>English:</strong></span>
+<span class="level">Fluent <br class="visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
+</li><!--//item-->
+</ul>
+</div><!--//content-->
+</div><!--//section-inner-->
+</aside><!--//section-->
+<aside class="list music aside section">
+<div class="section-inner">
+<h2 class="heading">Coding Playlist</h2>
+<div class="content">
+<ul class="list-unstyled">
+<li><i class="fa fa-headphones"></i> <a href="https://open.spotify.com/artist/4LEiUm1SRbFMgfqnQTwUbQ">Bon Iver</a></li>
+<li><i class="fa fa-headphones"></i> <a href="https://play.spotify.com/artist/46CitWgnWrvF9t70C2p1Me">Daughter</a></li>
+<li><i class="fa fa-headphones"></i> <a href="https://open.spotify.com/artist/3nJWBJvK7uGvfp4iZh9CkN">Relient K</a></li>
+<li><i class="fa fa-headphones"></i> <a href="https://open.spotify.com/artist/5VIq5RHAbVUMF700vdwfYw">Dry The River</a></li>
+</ul>
+</div><!--//content-->
+</div><!--//section-inner-->
+</aside><!--//section-->
                  <aside>
             </div><!--//secondary-->    
         </div><!--//row-->
