--- a/en/index.html
+++ b/en/index.html
@@ -29,6 +29,12 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
+    <script>
+    $(function(){
+    $("#second").load("/assets/html/secondary.html"); 
+    });
+    </script>
 </head> 
 
 <body>
@@ -98,8 +104,6 @@
                     </div><!--//secton-inner-->
                 </section><!--//section-->
             </div><!--//primary-->
-                
-               <!-- </section> //section-->
             <div class="secondary col-md-4 col-sm-12 col-xs-12" id="segundo">
             </div><!--//secondary-->    
         </div><!--//row-->
@@ -113,11 +117,6 @@
     </footer><!--//footer-->
  
     <!-- Javascript -->
-    <script>
-    $(function(){
-    $("#second").load("/assets/html/secondary.html"); 
-    });
-    </script>
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="/assets/plugins/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
