--- a/en/index.html
+++ b/en/index.html
@@ -111,6 +111,7 @@
     </footer><!--//footer-->
  
     <!-- Javascript -->
+    <script>$(function(){$("#second").load("/assets/html/secondary.html");});</script>
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="/assets/plugins/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
