--- a/en/index.html
+++ b/en/index.html
@@ -74,7 +74,7 @@
                     </div><!--//section-inner-->
                 </section><!--//section-->
 
-                               <section class="latest section">
+                 <section class="latest section">
                     <div class="section-inner">
                         <h2 class="heading">Latest Projects</h2>
                         <div class="content">    
@@ -163,6 +163,7 @@
                                 <p class="summary">Provide a brief description of your project. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel purus enim. Etiam tortor felis, fermentum ac ultrices sed.</p>
                                 <p><a class="more-link" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
+                    </div>
 
                 <section class="experience section">
                     <div class="section-inner">
