--- a/en/index.html
+++ b/en/index.html
@@ -32,7 +32,7 @@
 
 
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
-    <script>$(function(){$("#second").load("/assets/html/secondary.html");});</script>
+    <script>$(function(){$("#segundo").load("/assets/html/secondary.html");});</script>
 
 </head> 
 
@@ -52,7 +52,7 @@
                     <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>                 
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
+            <a class="btn btn-cta-primary pull-right" href="/" target="_blank"><i class="fa fa-paper-plane"></i> Em Português!</a>
         </div>
     </header><!--//header-->
 
@@ -164,6 +164,7 @@
                                 <p><a class="more-link" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                     </div>
+                </section>
 
                 <section class="experience section">
                     <div class="section-inner">
