--- a/assets/html/secondary.html
+++ b/assets/html/secondary.html
@@ -36,7 +36,10 @@
 <div class="level-bar-inner" data-level="60%">
 </div>                                      
 </div><!--//level-bar-->                                 
-</div><!--//item-->                                
+</div><!--//item-->
+<h3 class="level-title">JavaScript & jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Beginner</span></h3>
+<div class="level-bar">
+<div class="level-bar-inner" data-level="20%">                             
 </div>              
 </div><!--//content-->  
 </div><!--//section-inner-->                 
@@ -63,7 +66,7 @@
 <ul class="list-unstyled">
 <li class="item">
 <span class="title"><strong>Portuguese:</strong></span>
-<span class="level">Idioma Nativo <br class="visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
+<span class="level">Native Language <br class="visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
 </li><!--//item-->
 <li class="item">
 <span class="title"><strong>English:</strong></span>
