--- a/lateral.html
+++ b/lateral.html
@@ -14,11 +14,8 @@
     <div class="section-inner">
         <h2 class="heading">Habilidades</h2>
         <div class="content">
-            <p class="intro">
-                Eu não sei exatamente o que colocar aqui. Mas faltam mais listas e não sei sobre as %s</p>
-            
+            <p class="intro">            
             <div class="skillset">
-               
                 <div class="item">
                     <h3 class="level-title">C<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediário</span></h3>
                     <div class="level-bar">
@@ -33,7 +30,20 @@
                         <div class="level-bar-inner" data-level="60%">
                         </div>                                      
                     </div><!--//level-bar-->                                 
-                </div><!--//item-->                                
+                </div><!--//item-->    
+                <div class="item">
+<h3 class="level-title">MS Office e VBA<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediário</span></h3>
+<div class="level-bar">
+<div class="level-bar-inner" data-level="50%">
+</div>                                      
+</div><!--//level-bar-->                                 
+</div><!--//item-->
+<h3 class="level-title">JavaScript & jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Iniciante</span></h3>
+<div class="level-bar">
+<div class="level-bar-inner" data-level="20%">
+</div>                                      
+</div><!--//level-bar-->                                 
+</div><!--//item-->                              
             </div>              
         </div><!--//content-->  
     </div><!--//section-inner-->                 
