--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -73,6 +73,8 @@
 
                             <p> Bio-inspired computation is influenced by biological phenomena in order to develop algorithms that can be applied to a wide range of problems in diverse areas [DE CASTRO, 2006]. This project focused on Artificial Immune System (AIS) algorithms. The one studied is the cob-aiNet[C], which is combines the principles of Clonal Selection and the Theory of Immunological Network [COELHO, 2011].</p>
 
+                            <p> For a little more in depth read, check out the <span><a href="/Relatorio final de iniciacao cientifica - Daniel de Araujo Pereira.pdf">report</a></span> written by the end of the research (in portuguese only for now, sorry! Working on the translation)
+
                             <p><a href="https://github.com/ddearauj/cob-aiNet"><i class="fa fa-github-alt"></i></a><a href="https://github.com/ddearauj/cob-aiNet">  Project Github</a></p> 
                             <p>References</p>
 
