--- a/assets/html/secondary.html
+++ b/assets/html/secondary.html
@@ -36,10 +36,12 @@
 <div class="level-bar-inner" data-level="60%">
 </div>                                      
 </div><!--//level-bar-->                                 
-</div><!--//item-->
+<div><!--//item-->
 <h3 class="level-title">JavaScript & jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Beginner</span></h3>
 <div class="level-bar">
-<div class="level-bar-inner" data-level="20%">                             
+<div class="level-bar-inner" data-level="20%">
+</div>                                      
+</div><!--//level-bar-->                             
 </div>              
 </div><!--//content-->  
 </div><!--//section-inner-->                 
