--- a/assets/html/secondary.html
+++ b/assets/html/secondary.html
@@ -16,13 +16,16 @@
 <p class="intro">
 </p>
 <div class="skillset">
+
 <div class="item">
 <h3 class="level-title">C<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediate</span></h3>
+
 <div class="level-bar">
 <div class="level-bar-inner" data-level="60%">
 </div>                                      
 </div><!--//level-bar-->                                 
 </div><!--//item-->
+
 <div class="item">
 <h3 class="level-title">Java<span class="level-label">Intermediate</span></h3>
 <div class="level-bar">
@@ -30,13 +33,16 @@
 </div>                                      
 </div><!--//level-bar-->                                 
 </div><!--//item-->
+
+
 <div class="item">
 <h3 class="level-title">MS Office and VBA<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediate</span></h3>
 <div class="level-bar">
 <div class="level-bar-inner" data-level="60%">
+</div>
 </div>                                      
-</div><!--//level-bar-->                                 
-<div><!--//item-->
+</div>                              
+<div class="item"><!--//item-->
 <h3 class="level-title">JavaScript & jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Beginner</span></h3>
 <div class="level-bar">
 <div class="level-bar-inner" data-level="20%">
