--- a/en/index.html
+++ b/en/index.html
@@ -97,7 +97,6 @@
                         <div class="content">    
                             <div class="item featured text-center">
                                 <h3 class="title"><a href="Projects/IC" target="_blank">Imuno-inspired Computation on the Independent Component Analysis in Galois Fields</a></h3>
-                                <p class="summary">A study of bio-inspired computation on Blind Signal Separation</p>
                                 <div class="featured-image">
                                     <a href="Projects/IC" target="_blank">
                                     <img class="img-responsive project-image" src="/assets/images/projects/project-featured.png" alt="IC"/>
@@ -108,9 +107,9 @@
                                     </div>
                                     
                                 <div class="desc text-left">                                    
-                                    <p>Signal Separation Simulation to understand how the parameters of the imuno-inspired algorithm cob-aiNet affects the separetion effectiveness</p>
+                                    <p>A study of bio-inspired computation on Blind Signal Separation. Running Simulation to understand how the parameters of the imuno-inspired algorithm cob-aiNet affects the separetion effectiveness</p>
                                 </div><!--//desc-->         
-                                <a class="btn btn-cta-secondary" href="Projects/IC" target="_blank"><i class="fa fa-thumbs-o-up"></i> Find out more</a>                 
+                                <a class="btn btn-cta-secondary" href="Projects/IC" target="_blank"><i class="fa fa-paper-plane"></i> Find out more</a>                 
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
