--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -1,13 +1,20 @@
-<a href="/"><img class="profile-image img-responsive pull-left" src="/assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
+
+<a href="/en/"><img class="profile-image img-responsive pull-left" src="/assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
 <div class="profile-content pull-left">
     <h1 class="name">Daniel de Araujo Pereira</h1>
     <h2 class="desc">Industrial Engineer Undergrad Student</h2>   
     <ul class="social list-inline">
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
-        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
         <li><a href="https://br.linkedin.com/in/dpereira14"><i class="fa fa-linkedin"></i></a></li>
         <li><a href="https://github.com/ddearauj"><i class="fa fa-github-alt"></i></a></li>                  
         <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>                 
     </ul> 
+    <ul class =  "list-inline">
+    	<li><a href="#perfil">About Me/ </a></li>
+    	<li><a href="#lateProj">Latest Projects/ </a></li>
+    	<li><a href="#learnProj">Learning Projects/ </a></li>
+    	<li><a href="#profExp">Professional Experience/ </a></li>
+    	<li><a href="#gitAct">GitHub Activity/ </a></li>
+    </ul>
 </div><!--//profile-->
-<a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
+<a class="btn btn-cta-primary pull-right" href="/" target="_blank"><i class="fa fa-paper-plane"></i> Em Português!</a>
