--- a/en/index.html
+++ b/en/index.html
@@ -33,7 +33,7 @@
 
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
     <script>$(function(){$("#segundo").load("/assets/html/secondary.html");});</script>
-    <script>$(function(){$("#head").load("/assets/html/header.html");});</script>
+    <script>$(function(){$("#head").load("/assets/html/headerIndex.html");});</script>
 
     <script type="text/javascript">
   $(document).ready(function(){                
@@ -81,7 +81,7 @@
                 </section><!--//section-->
 
                  <section class="latest section">
-                    <div class="section-inner" id"lateProj">
+                    <div class="section-inner" id"projetos">
                         <h2 class="heading">Latest Projects</h2>
                         <div class="content">    
                             <div class="item featured text-center">
