--- a/assets/html/headerIndex.html
+++ b/assets/html/headerIndex.html
@@ -10,11 +10,11 @@
         <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>                 
     </ul> 
     <ul class =  "list-inline">
-    	<li><a href="#perfil">About Me</a>/</li>
-    	<li><a href="#projetos">Latest Projects</a>/</li>
-    	<li><a href="#learnProj">Learning Projects</a>/</li>
-    	<li><a href="#profExp">Professional Experience</a>/</li>
-    	<li><a href="#gitAct">GitHub Activity</a>/</li>
+    	<li><a href="#perfil">About Me</a></li>
+    	<li><a href="#projetos">Latest Projects</a></li>
+    	<li><a href="#learnProj">Learning Projects</a></li>
+    	<li><a href="#profExp">Professional Experience</a></li>
+    	<li><a href="#gitAct">GitHub Activity</a></li>
     </ul>
 </div><!--//profile-->
 <a class="btn btn-cta-primary pull-right" href="/" target="_blank"><i class="fa fa-paper-plane"></i> Em Português!</a>
