--- a/en/index.html
+++ b/en/index.html
@@ -133,16 +133,16 @@
                         <h2 class="heading">Professional Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title"> Strategic Pricing Analyst, Summer Intern - SP, Brazil <span class="place"><a href="https://www.itau.com.br/">Itaú-Unibanco</a></span> <span class="year">(Dec/2015 - Present)</span></h3>
-                                <p>Developing an automated report containing the analysis of the most recent strategy implemented by the bank. Understanding the affects on our production as well as tracing a plan of action for each platform based on the information gathared </p>
+                                <h3 class="title"> Strategic Pricing Analyst, Summer Intern - SP, Brazil - <span class="place"><a href="https://www.itau.com.br/">Itaú-Unibanco</a></span> <span class="year">(Dec/2015 - Present)</span></h3>
+                                <p>Developing an automated report containing the analysis of the most recent strategy implemented by the bank. Understanding the affects on our production as well as tracing a plan of action for each platform based on the information gathared.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Subsea Hardware Engineer, Summer Intern - Houston, TX <span class="place"><a href="http://www.shell.com/">Shell International Exploration and Production Inc</a></span> <span class="year">(Maio/15 - Aug/15)</span></h3>
+                                <h3 class="title">Subsea Hardware Engineer, Summer Intern - Houston, TX - <span class="place"><a href="http://www.shell.com/">Shell International Exploration and Production Inc</a></span> <span class="year">(Maio/15 - Aug/15)</span></h3>
                                 <p>Worked closely with our vendors to analyze and decide what is the best fabrication model for the <span><a href="https://en.wikipedia.org/wiki/Christmas_tree_(oil_well)">Subsea Christmas Tree</a></span> the project needs. Understanding both the project’s and Shell’s scope to ensure synergy and collaboration to guarantee the best result for both. Delaying Shell’s commitment to spend and allocating their assets efficiently. Developed a mechanism to ensure that the subsea hardware in storage is properly preserved and managed by our vendors.</p>
                             </div><!--//item-->
                             
                             <div class="item">
-                                <h3 class="title">Undergraduate Research - SP, Brazil<span class="place"><a href="https://www.prp.unicamp.br/pt-br/pibic-pibiti">CNPQ/Pibic</a></span> <span class="year">(Aug/13 - Aug/14)</span></h3>
+                                <h3 class="title">Undergraduate Research - SP, Brazil - <span class="place"><a href="https://www.prp.unicamp.br/pt-br/pibic-pibiti">CNPQ/Pibic</a></span> <span class="year">(Aug/13 - Aug/14)</span></h3>
                                 <p>Developed an Undergraduate Research on imuno-inspired computation in independent component analysis in finite fields.</p>
                             </div><!--//item-->
                             
