--- a/en/Projects/Brick/index.html
+++ b/en/Projects/Brick/index.html
@@ -61,6 +61,9 @@
                             <p>To compile the program, go to the folder containing the file and type:</p>
                             <p>gcc screen.c ball.c brick.c pad.c gameManager.c main.c -framework GLUT -framework OpenGL -o brick</p>
 
+                            <img class="img-responsive project-image" src="assets/images/projects/brick.png" alt="brick" />
+
+
                             <p><a href="https://github.com/ddearauj/brickbreaker"><i class="fa fa-github-alt"></i></a><a href="https://github.com/ddearauj/brickbreaker">  Project Github</a></p> 
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
