--- a/assets/html/headerIndex.html
+++ b/assets/html/headerIndex.html
@@ -15,4 +15,4 @@
     	<li><a href="#gitAct">GitHub Activity</a></li>
     </ul>
 </div><!--//profile-->
-<a class="btn btn-cta-primary pull-right" href="/" target="_blank"><i class="fa fa-paper-plane"></i> Em Português!</a>
+<!--<a class="btn btn-cta-primary pull-right" href="/" target="_blank"><i class="fa fa-paper-plane"></i> Em Português!</a>-->
