--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -10,4 +10,4 @@
         <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>                 
     </ul> 
 </div><!--//profile-->
-<a class="btn btn-cta-primary pull-right" href="/" target="_blank"><i class="fa fa-paper-plane"></i> Em Português!</a>
+<!--<a class="btn btn-cta-primary pull-right" href="/" target="_blank"><i class="fa fa-paper-plane"></i> Em Português!</a>-->
