--- a/en/index.html
+++ b/en/index.html
@@ -102,7 +102,7 @@
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="#" target="_blank">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="Projects/Brick" target="_blank">
                                 <img class="img-responsive project-image" src="/assets/images/projects/brick.png" alt="brick" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
