--- a/assets/html/headerIndex.html
+++ b/assets/html/headerIndex.html
@@ -2,7 +2,7 @@
 <a href="/en/"><img class="profile-image img-responsive pull-left" src="/assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
 <div class="profile-content pull-left">
     <h1 class="name">Daniel de Araujo Pereira</h1>
-    <h2 class="desc">Industrial Engineer Undergrad Student</h2>
+    <h2 class="desc1">Industrial Engineer Undergrad Student</h2>
     <ul class =  "list-inline">
     	<li><a href="#perfil">About Me</a></li>
     	<li><a href="#projetos">Latest Projects</a></li>
