--- a/en/Projects/EletronicLife/index.html
+++ b/en/Projects/EletronicLife/index.html
@@ -23,7 +23,7 @@
     
     
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="../../assets/css/styles.css">
+    <link id="theme-style" rel="stylesheet" href="/assets/css/styles.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -49,6 +49,11 @@
                 <section class="about section">
                     <div class="section-inner">
                         <h2 class="heading"> Elife </h2>
+
+                        <p>This is the eletronic life project from the book <a href="http://eloquentjavascript.net/" >Eloquent JavaScript</a> which the idea is to create a "world simulator". Right now, this world consists of two simple things: Walls (represented by the "#") and Critters (represented by the "o"). Critters move in a single direction ultil they hit a wall, then it will switch directions.</p>
+                        <p>Right now I've only added a couple of things. First of all I modulated the code so it would be easier to understand and would feel more like the object-oriented way of programming I am used to. Second of all I added the option of letting the user define their world instead of using a pre-defined one.</p>
+                        <p>To modulate the code, I used the <a href="http://github.com/jrburke/requirejs">require.js</a>, then I broke the code into separate .js files, using the following structure:</p>
+
 
                         <img src = "https://media.giphy.com/media/GyJ8p0Um850ic/giphy.gif"/>
 
