--- a/en/Projects/IC/index.html
+++ b/en/Projects/IC/index.html
@@ -30,11 +30,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
-    <script>
-    $(function(){
-    $("#second").load("/assets/html/secondary.html"); 
-    });
-    </script>
+    <script>$(function(){$("#second").load("/assets/html/secondary.html"); });</script>
+    <script>$(function()$("#head").load("/assets/html/header.html"); </script>
+
 
 
 </head> 
@@ -42,20 +40,7 @@
 <body>
     <!-- ******HEADER****** --> 
     <header class="header">
-        <div class="container">
-            <a href="/"><img class="profile-image img-responsive pull-left" src="/assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
-            <div class="profile-content pull-left">
-                <h1 class="name">Daniel de Araujo Pereira</h1>
-                <h2 class="desc">Industrial Engineer Undergrad Student</h2>   
-                <ul class="social list-inline">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="https://br.linkedin.com/in/dpereira14"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/ddearauj"><i class="fa fa-github-alt"></i></a></li>                  
-                    <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>                 
-                </ul> 
-            </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
+        <div class="container" id="head">
         </div>
     </header><!--//header-->
     
@@ -69,7 +54,7 @@
 
                             <p>The Blind Signal Separation (BSS) is the separation of a set of source signals from mixed signals. A simple example of such problem is to think of a group of people having a conversation and every person in the group is connected to a microphone. Each microphone is supposed to capture only the voice (signal) of the person it is attached to. But naturally it will pick up noises from other people in the group (sources), therefore the signal for each microphone will be a combination of the sources. What we want to do is separate the signal to make sure we have only a single voice per microphone.</p>
 
-                            <p>One of the approaches used to solve such problem - which was the one studied on the project -  the Independent Component Analysis (ICA), is usually considered on the field of real or complex signals. However, this project focused on discrete and finite fields (Galois Fields), allowing the problem to be trated as a combinatory search, therefore being in the scope of the utilization of bio-inspired computation to determine the solution [SILVA, 2013].</p>
+                            <p>One of the approaches used to solve such problem - which was the one studied on the project -  the Independent Component Analysis (ICA), is usually considered on the field of real or complex signals. However, this project focused on discrete and finite fields (Galois Fields), allowing the problem to be treated as a combinatory search, therefore being in the scope of the utilization of bio-inspired computation to determine the solution [SILVA, 2013].</p>
 
                             <p> Bio-inspired computation is influenced by biological phenomena in order to develop algorithms that can be applied to a wide range of problems in diverse areas [DE CASTRO, 2006]. This project focused on Artificial Immune System (AIS) algorithms. The one studied is the cob-aiNet[C], which is combines the principles of Clonal Selection and the Theory of Immunological Network [COELHO, 2011].</p>
 
