--- a/en/Projects/ELife/index.html
+++ b/en/Projects/ELife/index.html
@@ -59,7 +59,21 @@
 
                         <div id = "myDIV">
 
-                        <textarea type="text" id="novoMundo"></textarea>
+                        <textarea type="text" id="novoMundo">
+                         ############################
+                         #o o   #          ~        #
+                         #           #o             #
+                         #                          #
+                         #               #          #
+                         #                          #
+                         #             ~            #
+                         #   ~                      #
+                         #                          #
+                         #             ~            #
+                         #     #      o##     ##    #
+                         #                          #
+                         ############################
+                        </textarea>
                         <button onclick = "animateWorld(mundo)">run code</button>
 
                         </div>
