--- a/Projects/ELife/index.html
+++ b/Projects/ELife/index.html
@@ -55,25 +55,9 @@
                         <p>To modulate the code, I used the <a href="http://github.com/jrburke/requirejs">require.js</a>, then I broke the code into separate .js files, using the following structure:</p>
 
 
-                        <img src = "https://media.giphy.com/media/GyJ8p0Um850ic/giphy.gif"/>
-
                         <div id = "myDIV">
 
-                        <textarea type="text" id="novoMundo">
-                         ############################
-                         #o o   #          ~        #
-                         #           #o             #
-                         #                          #
-                         #               #          #
-                         #                          #
-                         #             ~            #
-                         #   ~                      #
-                         #                          #
-                         #             ~            #
-                         #     #      o##     ##    #
-                         #                          #
-                         ############################
-                        </textarea>
+                        <textarea type="text" id="novoMundo"></textarea>
                         <button onclick = "animateWorld(mundo)">run code</button>
 
                         </div>
